--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,11 @@ body {
     background-color: #ECF2FF;
 }    
 img {
-    height: 300px;
+    height: 280px;
+    border-radius: 100%;
+}
+.myprofile:hover {
+    height: 330px;
 }
 hr {
     border: none;
